<resources>
    <string name="app_name">RecipeMan</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_description">Description</string>
    <string name="recipe_prep_time">15 mins</string>
    <string name="image_description">Picture of recipe</string>
    <string name="add_button_description">Add recipe</string>
    <string name="search_default_hint">Search here…</string>

    <string name="greeting_text">Welcome back!</string>
    <string name="login_choice_text">Continue with Google or enter your details</string>
    <string name="login_google_btn">Log in with Google</string>
    <string name="divider_text">or</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Log in</string>
    <string name="no_acc_text">Don\'t have an account yet?</string>
    <string name="sign_up_text"><u>Sign in</u></string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>